RESOLVED FIXED263275
RemoteLayerTreeDrawingAreaProxy::waitForDidUpdateActivityState doesn't dispatch didRefreshDisplay if it tries to wait for a second commitLayerTree message
https://bugs.webkit.org/show_bug.cgi?id=263275
Summary RemoteLayerTreeDrawingAreaProxy::waitForDidUpdateActivityState doesn't dispat...
Matt Woodrow
Reported 2023-10-17 13:09:12 PDT
<rdar://113318934> waitForDidUpdateActivityState sends a didRefreshDisplay message to the web content process (if one was pending) to ensure that the web process knows it can commit a new layer tree. If the incoming CommitLayerTree message didn't include the right activity state change, then we wait again, but don't send a new didRefreshDisplay, and we wait for a message that isn't coming.
Attachments
Matt Woodrow
Comment 1 2023-10-17 13:10:56 PDT
EWS
Comment 2 2023-10-18 13:56:43 PDT
Committed 269486@main (ee5c4b70a09c): <https://commits.webkit.org/269486@main> Reviewed commits have been landed. Closing PR #19182 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.