waitForDidUpdateActivityState can block for 250ms waiting for a message that isn't pending. https://bugs.webkit.org/show_bug.cgi?id=263275 <rdar://113318934>

Reviewed by Simon Fraser.

RemoteLayerTreeDrawingAreaProxy::waitForDidUpdateActivityState sends a didRefreshDisplay message
to the web content process (if one was pending) to ensure that the web process knows it can commit
a new layer tree.

If the incoming CommitLayerTree message didn't include the right activity state change, then we
wait again, but don't send a new didRefreshDisplay, and we wait for a message that isn't coming.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::waitForDidUpdateActivityState):

Canonical link: https://commits.webkit.org/269486@main